todo-sg-stack.yaml
Description: Security Group Stack

Parameters:
  AppName: 
    Type: String
    Description: "Application name that is prefixed to resource names"

  Environment: 
    Type: String
    Description: "Environment"

  VPCId: 
    Type: String
    Description: VPC ID

Resources:
  # SSH Security Group - Bastion Host 
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access on Bastion Host
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-${Environment}-bastion-instance-sg"

  # Security Group - EC2 Instance
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG for Private EC2 - HTTP + 3000 Port 
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-${Environment}-api-instance-sg"

  # Security group - Load Balancer
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG for Load Balancer - HTTP
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-${Environment}-alb-sg"

  # Security Group - DB
  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${AppName}-${Environment}-db-sg"
      GroupDescription: "Database security group for accessing db from APIs"
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !GetAtt SSHSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-${Environment}-db-sg"

Outputs:
  ALBSecurityGroupId:
    Description: ALB Security Group
    Value: !GetAtt ALBSecurityGroup.GroupId
  SSHSecurityGroupId:
    Description: SSH Security Group
    Value: !GetAtt SSHSecurityGroup.GroupId
  InstanceSecurityGroupId:
    Description: Instance Security Group
    Value: !GetAtt InstanceSecurityGroup.GroupId
  DatabaseSecurityGroupId:
    Description: Database Security Group
    Value: !GetAtt DatabaseSecurityGroup.GroupId
